2013-07-02  Moritz Bunkus  <moritz@bunkus.org>

        * build system: libMatroska 1.4.1 is now required for building.

2013-06-27  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.3.0.

        * mkvmerge: bug fix: When appending unframed AVC/h.264 tracks and
        setting the default duration the second and all following source
        parts will use the same default duration as set for the first
        part. Fixes #889.

        * all: enhancement (Windows only): mmg will store its settings in
        a file "mkvtoolnix.ini" in the same folder mmg.exe is located in
        if MKVToolNix hasn't been installed via its installer. If it has
        been installed then the settings are stored in the Windows
        registry. This way MKVToolNix is truly portable.

        * mmg: new feature: mmg's windows and dialogs will remember and
        restore their positions and sizes. Implements #878.

2013-06-26  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: AVC/h.264 output module: fixed writing the
        wrong values if --fix-bitstream-timing-information is used. Fixes
        #888.

2013-06-24  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: FLV reader: Implemented deriving the video
        dimensions for FLV1 type tracks from the frame content if they're
        not given within a script tag. Fixes #880.

        * mkvmerge: bug fix: Fixed handling MPEG transport streams with
        broken PES packet streams. Fixes #879 and #887.

        * mkvextract: bug fix: mkvextract writes the correct value for the
        "block alignment" value in the header of WAV files (mostly affects
        mono PCM audio tracks). Fixes #883.

2013-05-26  Moritz Bunkus  <moritz@bunkus.org>

        * all: new feature: added a Portuguese translation of the programs
        by Ricardo Perdigão (see AUTHORS).

2013-04-28  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.2.0.

2013-04-27  Moritz Bunkus  <moritz@bunkus.org>
