@@ -1,5 +1,8 @@
 2013-07-02  Moritz Bunkus  <moritz@bunkus.org>
 
+        * mkvinfo: new feature: Added support for the new Matroska
+        elements DiscardPadding, CodecDelay and SeekPreRoll.
+
         * build system: libMatroska 1.4.1 is now required for building.
 
 2013-06-27  Moritz Bunkus  <moritz@bunkus.org>
